--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section id="about">
     <h2>About Me:</h2>
-    <p>HELLO! Im Roy Alastair B. Parungao, Im from Novaliches Quezon City, I am a grade - 12 student of Jordan Woods Academy - (JWA), Im a ICT student with a few experience about codings, I like sketching cartoon characters and animate them, Im also a trainee of CQB's.</p>
+    <p>Hello! Im Roy Alastair B. Parungao, Im from Novaliches Quezon City, I am a grade - 12 student of Jordan Woods Academy - (JWA), Im a ICT student with a few experience about codings, I like sketching cartoon characters and animate them, Im also a trainee of CQB's.</p>
     </section>
 
     <section id="hobbies">
@@ -50,7 +50,7 @@
 <style>
     body {
         background-color: rgb(252, 252, 252);
-        background-image: url("images.JPG");
+        background-image: url("images/images.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
